Fixed horizontal scroll issue

--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@
     text-align: left; /* LATE */
     overflow: hidden;
     line-height: 1.2;
-    padding-left: 50%;
+    /* padding-left: 50%; Issue Here*/ 
 }
 
 .midHome .changingText {
@@ -36,6 +36,7 @@
 
 .midHome .changingText.firstText {
     color: #FFFFFF;
+    padding-left: 25%;
 }
 
 .changingText.secondText:before {
@@ -46,7 +47,6 @@
     height: 100%;
     width: 100%;
     background-color: #0f0e17;
-    /*border-left: 2px solid #4070F4;*/
     border-left: 2px solid #f25f4c;
     animation: animate 4s steps(22) infinite;
 }
@@ -65,6 +65,7 @@
     font-size: 90px;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
+    padding-left: 25%;
 }
 
 #timeContainer {
@@ -72,6 +73,7 @@
     font-size: 20px;
     font-family: 'Anonymous Pro', monospace;  
     font-weight: 600;
+    padding-left: 25%;
 }
 
 #location {
@@ -79,6 +81,7 @@
     font-size: 20px;
     font-family: 'Anonymous Pro', monospace;  
     font-weight: 600;
+    padding-left: 25%;
 }
 
 #locationLink {
